# microk8s-raspi

./: README.md  ansible.cfg  cluster.yml  debug.yml  install_python.yml  inventory.yml  pyproject.toml  uptime.yml
group_vars/: all.yml
roles/common/files/: cmdline.txt
roles/common/tasks/: main.yml
roles/commoninstall/tasks/: main.yml
roles/debug/tasks/: main.yml
roles/main/tasks/: main.yml
roles/nodes/tasks/: main.yml
roles/uptime/tasks/: main.yml
