[tool.poetry]
name = "microk8s-raspi"
version = "0.1.0"
description = ""
authors = ["Aaron Addleman <aaronaddleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
